@@ -3,6 +3,8 @@ Version: 0.1.2
 Date: 2019-XX-XX
   Features:
     - Update to .17
+  Changes:
+    - Only an admin can issue Santa commands
   Bugfixes:
     - Add missing Santa Takeoff Method setting localisation
   Info:
